[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["server", "http1"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }